# rust-axum-tutorial

./: .gitignore  Cargo.toml  README.md
axum-demo/: Cargo.toml  README.md
axum-demo/src/: main.rs
axum-demo2/: Cargo.toml  README.md
axum-demo2/src/: main.rs
axum-demo3/: Cargo.toml  README.md
axum-demo3/src/: main.rs
axum-demo4/: Cargo.toml  README.md
axum-demo4/src/: main.rs
axum-demo5/: Cargo.toml  README.md
axum-demo5/src/: main.rs
axum-demo6/: Cargo.toml  README.md
axum-demo6/src/: main.rs
axum-demo7-simplewebserver/: Cargo.toml  README.md
axum-demo7-simplewebserver/src/: main.rs
axum-demo7-webserver/: Cargo.toml
static/: index.html
