[package]
name = "axum-demo4"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie", "protobuf"] }
serde = "1.0.209"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
