[package]
name = "axum-demo7-simplewebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
